Requirement 6: User has an option to quit the application.