@@ -19,10 +19,10 @@ public class BibliotecaApp {
         List<Book> books = Arrays.asList(book1, book2, book3);
         Library library = new Library(books);
 
-        Menu menu = new Menu(Collections.singletonList("List Books"));
+        Menu menu = new Menu(List.of("List Books", "Quit"));
         menu.display();
 
-        Input input = new Input(library);
+        Input input = new Input(library, menu);
         input.get();
 
     }
